fix: align services, about and status sections to design

--- a/css/styles.css
+++ b/css/styles.css
@@ -517,7 +517,7 @@ section {
 .crane {
   position: absolute;
   bottom: -87px;
-  left: 69px;
+  left: 110px;
 }
 
 /* --------- SERVICES --------- */
@@ -720,9 +720,13 @@ section {
 .about-upper-block {
   display: flex;
   flex-direction: row;
-  gap: 172px;
+  gap: 83px;
 
   margin-bottom: 67px;
+}
+
+.about-upper-block-left {
+  width: 686px;
 }
 
 .about-text {
@@ -827,11 +831,6 @@ section {
   background: linear-gradient(to bottom, rgba(5, 0, 0, 0.2) 0%, rgba(14, 14, 14, 1) 100%);
 }
 
-.about-swiper-content {
-  position: relative;
-  z-index: 1;
-}
-
 .swiper-slide.swiper-second.swiper-second-1st {
   background-image: url(../assets/img/about/about-1.webp);
 }
@@ -901,7 +900,8 @@ section {
 
 .about-swiper-content {
   position: relative;
-  top: 94px;
+  top: 101px;
+  z-index: 1;
 
   user-select: none;
 
@@ -917,6 +917,10 @@ section {
 }
 
 .swiper-second-points {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
   margin-top: 12px;
   
   color: var(--bg-color);
@@ -956,6 +960,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 10px;
   z-index: 10;
 
   width: calc((100% - 72px) / 4);
